- optimized table - fixed spacing and borders b/w header and rows

--- a/frontend/stylesheets/mylists.css
+++ b/frontend/stylesheets/mylists.css
@@ -53,7 +53,6 @@
 .heading-text {
     display: flex;
     flex-direction: row;
-
     justify-content: center;
     font-family: "Caudex", serif;
     font-size: 2.5rem;
@@ -63,7 +62,7 @@
 .filter-button {
     font-family: "Inter", sans-serif;
     font-weight: bold;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     color: #ffffff;
     padding: 0.6rem 2rem 0.6rem 2rem;
     background-color: #2a2a2a;
@@ -75,7 +74,7 @@
 
 .filter-menu {
     position: absolute;
-    background-color: #2a2a2a;
+    background-color: var(--third-color-mylists);
     border: 0.1rem solid #8a8a8a;
     border-radius: 1rem;
     padding: 0.5rem;
@@ -90,7 +89,7 @@
     font-family: "Inter", sans-serif;
     font-size: 125%;
     color: #ffffff;
-    background-color: #2a2a2a;
+    background-color: var(--third-color-mylists);
     text-align: left;
     padding: 0.5rem;
     border-radius: 0.5rem;
@@ -101,13 +100,12 @@
 #sort-by {
     border-radius: 2rem 2rem 2rem 2rem;
     font-family: "Inter", sans-serif;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: bold;
     padding: 0.5rem 1rem 0.5rem 1rem;
     background-color: var(--third-color-mylists);
     border-width: 0;
     text-align: center;
-
     margin-left: 1rem;
 }
 
@@ -115,19 +113,30 @@
 .movie-table {
     background-color: var(--third-color-mylists);
     margin: 2rem 0 0 0;
-    padding: 2rem 2rem 2rem 2rem;
-    border-radius: 1rem 1rem 1rem 1rem;
+    padding: 2rem;
+    border-radius: 2rem;
 }
 
 .movie-table table {
     width: 100%;
+    border-spacing: 0;
 }
 
 .movie-table th {
     font-family: "Inter", sans-serif;
     font-size: 1.5rem;
     background-color: var(--forth-color-mylists);
-    border-radius: 1rem 1rem 1rem 1rem;
+    border-radius: 2rem;
+    padding: 1rem;
+    border: 0.5rem solid var(--third-color-mylists);
+}
+
+.movie-table td {
+    font-family: "Inter", sans-serif;
+    font-size: 1.5rem;
+    background-color: var(--forth-color-mylists);
+    border: 0.2px solid #8a8a8a;
+    padding: 1rem;
 }
 
 .movie-table tbody {
@@ -135,7 +144,27 @@
     background-color: var(--forth-color-mylists);
 }
 
-/* Liri & Josheen ends */
+.movie-table tr:first-child td {
+    border-width: 0;
+    border-color: var(--third-color-mylists);
+    background-color: var(--third-color-mylists);
+}
+
+.movie-table tr:nth-child(2) td:first-child {
+    border-radius: 1rem 0 0 0;
+}
+
+.movie-table tr:nth-child(2) td:last-child {
+    border-radius: 0 1rem 0 0;
+}
+
+.movie-table tr:last-child td:first-child {
+    border-radius: 0 0 0 1rem;
+}
+
+.movie-table tr:last-child td:last-child {
+    border-radius: 0 0 1rem 0;
+}
 
 .table-footer {
     display: flex;
@@ -148,7 +177,7 @@
 
     border-radius: 2rem 2rem 2rem 2rem;
     font-family: "Inter", sans-serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding: 0.5rem 1rem 0.5rem 1rem;
     border-width: 0;
     text-align: center;
